secure-data-processing-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-data-processing-service
  namespace: secure-data-processing
spec:
  selector:
    app: secure-data-processing-service
  ports:
    - port: 80
      targetPort: 8000
